JCR-16 Resolved Findbugs and PMD issues